// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationDate shows date range validation 1`] = `
<div>
  <div
    class="ddm-form-field-type__validation-date-accepted-date"
  >
    <div>
      <label>
        accepted-date
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              Range
            </div>
            <input
              name="selectedValidation"
              type="hidden"
              value="dateRange"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <label>
    START-DATE
  </label>
  <div
    class="separator"
  />
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        starts-from
      </label>
      <div
        data-tooltip-align="top"
        title="starts-from-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__custom-date"
  >
    <div>
      <label>
        operation
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              plus
            </div>
            <input
              name="selectedOperation_startsFrom"
              type="hidden"
              value="plus"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div>
      <label>
        quantity
      </label>
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_startsFrom"
        type="number"
        value="1"
      />
    </div>
    <div>
      <label>
        unit
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              days
            </div>
            <input
              name="selectedUnit_startsFrom"
              type="hidden"
              value="days"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <label>
    END-DATE
  </label>
  <div
    class="separator"
  />
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        ends-on
      </label>
      <div
        data-tooltip-align="top"
        title="ends-on-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__custom-date"
  >
    <div>
      <label>
        operation
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              plus
            </div>
            <input
              name="selectedOperation_endsOn"
              type="hidden"
              value="plus"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div>
      <label>
        quantity
      </label>
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_endsOn"
        type="number"
        value="1"
      />
    </div>
    <div>
      <label>
        unit
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              days
            </div>
            <input
              name="selectedUnit_endsOn"
              type="hidden"
              value="days"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <label
    for="validationDate_errorMessage"
  >
    error-message
  </label>
  <input
    class="form-control"
    id="validationDate_errorMessage"
    name="validationDate_errorMessage"
    placeholder="this-field-is-invalid"
    type="text"
    value="[object Object]"
  />
</div>
`;

exports[`ValidationDate shows future dates validation 1`] = `
<div>
  <div
    class="ddm-form-field-type__validation-date-accepted-date"
  >
    <div>
      <label>
        accepted-date
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              Future Dates
            </div>
            <input
              name="selectedValidation"
              type="hidden"
              value="futureDates"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        starts-from
      </label>
      <div
        data-tooltip-align="top"
        title="starts-from-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__custom-date"
  >
    <div>
      <label>
        operation
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              plus
            </div>
            <input
              name="selectedOperation_startsFrom"
              type="hidden"
              value="plus"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div>
      <label>
        quantity
      </label>
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_startsFrom"
        type="number"
        value="1"
      />
    </div>
    <div>
      <label>
        unit
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              days
            </div>
            <input
              name="selectedUnit_startsFrom"
              type="hidden"
              value="days"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <label
    for="validationDate_errorMessage"
  >
    error-message
  </label>
  <input
    class="form-control"
    id="validationDate_errorMessage"
    name="validationDate_errorMessage"
    placeholder="this-field-is-invalid"
    type="text"
    value="[object Object]"
  />
</div>
`;

exports[`ValidationDate shows past dates validation 1`] = `
<div>
  <div
    class="ddm-form-field-type__validation-date-accepted-date"
  >
    <div>
      <label>
        accepted-date
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              Past Dates
            </div>
            <input
              name="selectedValidation"
              type="hidden"
              value="pastDates"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        ends-on
      </label>
      <div
        data-tooltip-align="top"
        title="ends-on-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__custom-date"
  >
    <div>
      <label>
        operation
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              plus
            </div>
            <input
              name="selectedOperation_endsOn"
              type="hidden"
              value="plus"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div>
      <label>
        quantity
      </label>
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_endsOn"
        type="number"
        value="1"
      />
    </div>
    <div>
      <label>
        unit
      </label>
      <div
        class="dropdown"
      >
        <div
          class="dropdown-toggle form-builder-select-field input-group-container"
          style=""
        >
          <div
            class="form-control results-chosen select-field-trigger"
          >
            <div
              class="option-selected"
            >
              days
            </div>
            <input
              name="selectedUnit_endsOn"
              type="hidden"
              value="days"
            />
            <a
              class="select-arrow-down-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-double"
                role="presentation"
              >
                <use
                  xlink:href="#caret-double"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <label
    for="validationDate_errorMessage"
  >
    error-message
  </label>
  <input
    class="form-control"
    id="validationDate_errorMessage"
    name="validationDate_errorMessage"
    placeholder="this-field-is-invalid"
    type="text"
    value="[object Object]"
  />
</div>
`;
